force-app/main/default/objects/custom_create252__c/custom_create252__c.object-meta.xml
<CustomObject>
    <label>Custom created object252</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects252</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>