force-app/main/default/objects/custom_create252__c/fields/custom_create_252field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_252field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 252field503</label>
    <type>Checkbox</type>
</CustomField>